--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -221,6 +221,7 @@ a {
 
   @include mobile {
     max-width: 37.2rem;
+    top: 3.2rem;
   }
 }
 
